# FILE(GLOB SRC *.cpp)

cmake_minimum_required(VERSION 2.6)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIX -D_LINUX=1 -DCMDLINE=1")

SET(SRC
  cppUSFS.cpp
)
ADD_LIBRARY(USFS SHARED ${SRC})
TARGET_LINK_LIBRARIES(USFS -li2c)
install(TARGETS USFS DESTINATION ${project_LIB_DIR}/)
